[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv"
xfail_strict=true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.format]
max-line-length = 99

[tool.pydocstyle]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D400"  # First line should end with a period
]

[[tool.mypy.overrides]]
module = [
  "pyserial.*"
]
ignore_missing_imports = true
